<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_blur"
    android:orientation="vertical"
    android:id="@+id/container"
    tools:context="fixtpro.com.fixtpro.SetupCompleteScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_setupcomplete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setupcomplete"
            android:padding="@dimen/padd"
            android:textSize="@dimen/txt_voila"
            android:textColor="@color/register_button_text" />

        <ImageView
            android:id="@+id/img_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/thumb" />
        <TextView
            android:id="@+id/text_voila"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/voila"
            android:padding="@dimen/padd"
            android:textSize="@dimen/txt_voila"
            android:textColor="@color/register_button_text" />

        <TextView
            android:id="@+id/text_belowthumb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text1"
            android:padding="@dimen/padd"
            android:textSize="@dimen/txt_normal_w"
            android:textColor="@color/register_button_text" />

        <TextView
            android:id="@+id/text_inthe"
            android:layout_margin="@dimen/margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text2"
            android:padding="@dimen/padd"
            android:textSize="@dimen/txt_normal_w"
            android:textColor="@color/register_button_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/play_bg_img">
        <ImageView
            android:id="@+id/img_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/play"/>
        <TextView
            android:id="@+id/text_watch_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orange_signin_back"
            android:layout_marginTop="10dp"
            android:text="@string/watchvideo"/>
    </LinearLayout>
</LinearLayout>
