<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grey_blur"
    android:orientation="vertical"
    tools:context="fixtpro.com.fixtpro.ContactUsActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionbar_bg"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/screen_cross"/>
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/declinejob"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/declinejob_cross"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:textColor="@color/register_button_text"
        android:text="@string/ohno"/>
    <TextView
        android:id="@+id/areusure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/register_button_text"
        android:text="@string/areusure_decline"/>
    <TextView
        android:id="@+id/backup_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/register_button_text"
        android:text="@string/backup_decline"/>
    <EditText
        android:id="@+id/edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColorHint="@color/register_button_text"
        android:textColor="@color/register_button_text"
        android:gravity="top"
        android:padding="5dp"
        android:layout_gravity="center"
        android:hint="@string/declineedittext"
        android:background="@drawable/declinejob_box"/>
    <ImageView
        android:id="@+id/yesdecline_cancel_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/yesdecline"/>

</LinearLayout>
