<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_grey_blur"
    tools:context="fixtpro.com.fixtpro.ConfirmationActivity">

    <android.support.v7.widget.Toolbar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/actionbar_bg"
        local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        local:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:textSize="20sp"
                android:text="@string/done"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/register_button_text"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/confirmation"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:src="@drawable/thumbs"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/register_button_text"
        android:gravity="center"
        android:textSize="22sp"
        android:text="@string/success"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/register_button_text"
        android:layout_marginTop="5dp"
        android:text="@string/confirmtext"
        android:gravity="center"/>
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/register_button_text"
        android:gravity="center"
        android:textSize="22sp"
        android:text="Sat, Jan 30, 2016"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/register_button_text"
        android:text="@string/between"
        android:gravity="center"/>
    <TextView
        android:id="@+id/time_interval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/register_button_text"
        android:text="02:00PM - 04:00PM"
        android:textSize="20sp"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/register_button_text"
        android:text="@string/fortext"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/register_button_text"
        android:gravity="center"
        android:textSize="20sp"
        android:text="Gurusharan"/>
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/register_button_text"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="9952 Tanglevine - The Colony,Texas"/>
    <ImageView
        android:id="@+id/action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/view_in_calendar"/>
</LinearLayout>
