<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur"
    tools:context="fixtpro.com.fixtpro.Login_Register_Activity">
    <RelativeLayout

        android:orientation="horizontal"
        android:id="@+id/header_items"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:padding="@dimen/padding_header_items"
            android:id="@+id/txtBack"
            android:text="@string/back"
            android:textSize="@dimen/text_size_header_items"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="@dimen/padding_header_items"
            android:id="@+id/txtDone"
            android:layout_alignParentRight="true"
            android:text="@string/done"
            android:textSize="@dimen/text_size_header_items"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>
   <ScrollView
       android:layout_below="@+id/header_items"
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <RelativeLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent">
        <LinearLayout
            android:padding="@dimen/layout_padding"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:gravity="center"
            android:id="@+id/picture_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_pic"
                android:layout_width="@dimen/profile_pic_hei_wid"
                android:layout_height="@dimen/profile_pic_hei_wid"
                android:src="@drawable/addphoto_img"
                app:civ_border_color="#ffffff"/>

            <TextView
                android:gravity="center_horizontal"
                android:padding="@dimen/add_photo_text_padding"
                android:textSize="@dimen/add_photo_size"
                android:textColor="@android:color/white"
                android:text="@string/add_photo"
                android:id="@+id/lblChangePhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
           <LinearLayout
               android:padding="@dimen/layout_padding"
               android:layout_below="@+id/picture_container"
               android:layout_centerHorizontal="true"
               android:orientation="vertical"
               android:id="@+id/user_info_container"
               android:layout_width="match_parent"
               android:layout_height="match_parent">

               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:id="@+id/txtFirstName"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:singleLine="true"
                   android:textSize="@dimen/edittext_size"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/first_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"

                   />
               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtLastName"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:gravity="center_horizontal"
                   android:textSize="@dimen/edittext_size"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/last_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:visibility="gone"
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtPhone"
                   android:inputType="number"
                   android:textSize="@dimen/edittext_size"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/phone_number"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtEmail"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:textSize="@dimen/edittext_size"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:singleLine="true"
                   android:id="@+id/txtCompany"
                   android:textSize="@dimen/edittext_size"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/company_name"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtAddress"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:textSize="@dimen/edittext_size"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/address"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtCity"
                   android:textSize="@dimen/edittext_size"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionNext"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/city"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
               <EditText
                   android:padding="@dimen/edittext_padding"
                   android:singleLine="true"
                   android:id="@+id/txtZip"
                   android:textColor="@android:color/white"
                   android:imeOptions="actionDone"
                   android:textSize="@dimen/edittext_size"
                   android:inputType="number"
                   android:gravity="center_horizontal"
                   android:textCursorDrawable="@drawable/cursor_drawable"
                   android:background="@android:color/transparent"
                   android:textColorHint="@android:color/white"
                   android:hint="@string/zip_code"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   />
           </LinearLayout>


       </RelativeLayout>
   </ScrollView>



</RelativeLayout>
